style: added transitions

--- a/index.html
+++ b/index.html
@@ -2,9 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="https://media.licdn.com/dms/image/D560BAQEqbLtwmVw12g/company-logo_200_200/0/1719230825611/clade_in_logo?e=1727913600&v=beta&t=8Bzs9I4al3l6eN0S_N16Sh53Xdq5a0RMA1NuyC3nXLs"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Clade Job Page</title>
+    <title>Clade-Job | Abhisek Panda</title>
   </head>
   <body>
     <div id="root"></div>
